Ddefect fix: on-demand text is being truncated with ellipses for some reason

--- a/less/components/consonant/cards/one-half.less
+++ b/less/components/consonant/cards/one-half.less
@@ -62,7 +62,7 @@
             position: absolute;
             display: flex;
             justify-content: flex-start;
-            max-width: 95%;
+            max-width: 96%;
             bottom: 24px;
             right: 0;
             padding: 6px 8px;
